# flappy

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  latebit.cfg  local.sh  main.cpp
assets/audio/: dash.lbsfx  gameover.lbsfx  music.lbmus  sound.lbsfx
assets/sprites/: background.lbspr  bird.lbspr  bubbles.lbspr  fish.lbspr  floor.lbspr  logo.lbspr  pipe.lbspr  top-pipe.lbspr
cmake/: FetchEngine.cmake  FetchKiosk.cmake
docs/: index.data  index.html  index.js  index.wasm
docs/assets/: start.aac
src/: State.cpp  State.h
src/characters/: Bird.cpp  Fish.cpp  characters.h
src/environment/: Background.cpp  Floor.cpp  Pipe.cpp  environment.h
src/events/: EventGameOver.cpp  EventGameStart.cpp  EventScore.cpp  events.h
src/scenes/: GameOverScene.cpp  GameScene.cpp  GameStartScene.cpp  Scene.h  SceneManager.cpp  scenes.h
src/ui/: Logo.cpp  Score.cpp  Text.cpp  ui.h
